--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "url": "git://github.com/seanmonstar/Shipyard.git"
   },
   "bin": "./bin/shipyard",
+  "directories": {
+    "bin": "./bin",
+    "lib": "./lib"
+  },
   "engines": {
     "node": "<v0.5.0"
   },
