--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": { 
 	"jsdom": "~0.2.0",
 	"dryice": "git://github.com/seanmonstar/dryice.git",
-	"commander": "~0.2.0"
+	"commander": "0.x"
   },
   "devDependencies": {},
   
