--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lib": "./lib"
   },
   "engines": {
-    "node": "<v0.5.0"
+    "node": "0.6.x"
   },
   "dependencies": { 
 	"jsdom": "~0.2.0",
